Organizing the methods and files.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -53,18 +53,18 @@
             <div class="accountSelect">
               Account:
               <select id="selectionAccounts" required>
-                <option value="">Select an account</option>
+                <option value="default">Select an account</option>
               </select>
             </div>
             <div class="fromTo">
               From:
               <select class="fromToSelections" id="inputFromSelect" required>
-                <option value="">Select an account</option>
+                <option value="default">Select an account</option>
               </select>
   
               To:
               <select class="fromToSelections" id="inputToSelect" required>
-                <option value="">Select an account</option>
+                <option value="default">Select an account</option>
               </select>
             </div>
           </div>
@@ -115,7 +115,6 @@
   <script type="module" src="./js/helpers/Account.js" defer></script>
   <script type="module" src="./js/helpers/Category.js" defer></script>
   <script type="module" src="./js/helpers/Common.js" defer></script>
-  <script type="module" src="./js/helpers/Transaction.js" defer></script>
   <script type="module" src="./js/index.js" defer></script>
 </body>
 
