--- a/frontend/index.html
+++ b/frontend/index.html
@@ -103,14 +103,24 @@
     </div>
     <table>
       <tr>
-        <th>Id</th>
-        <th>Username</th>
-        <th>Transaction Type</th>
+        <th>ID</th>
+        <th>User</th>
+        <th>Type</th>
         <th>Category</th>
         <th>Description</th>
         <th>Amount</th>
         <th>From</th>
         <th>To</th>
+      </tr>
+      <tr>
+        <td id="id">Id</th>
+        <td id="userName">Username</th>
+        <td id="transactionType">Transaction Type</th>
+        <td id="category">Category</th>
+        <td id="description">Description</th>
+        <td id="amount">Amount</th>
+        <td id="from">From</th>
+        <td id="to">To</th>
       </tr>
     </table>
   </main>
