display the information

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -100,7 +100,7 @@
       <select></select>
     </div>
     <table>
-      <tr>
+      <tr id="transInformation">
         <th>ID</th>
         <th>User</th>
         <th>Type</th>
@@ -110,16 +110,16 @@
         <th>From</th>
         <th>To</th>
       </tr>
-      <tr>
-        <td id="id">Id</th>
-        <td id="userName">Username</th>
-        <td id="transactionType">Transaction Type</th>
-        <td id="category">Category</th>
-        <td id="description">Description</th>
-        <td id="amount">Amount</th>
-        <td id="from">From</th>
-        <td id="to">To</th>
-      </tr>
+      <!-- <tr>
+        <td id="id"></th>
+        <td id="userName"></th>
+        <td id="transactionType"></th>
+        <td id="category"></th>
+        <td id="description"></th>
+        <td id="amount"></th>
+        <td id="from"></th>
+        <td id="to"></th>
+      </tr> -->
     </table>
   </main>
   <script type="module" src="./js/helpers/Account.js" defer></script>
