Adding final style. Function to get category by id added.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -51,7 +51,7 @@
         <div class="settingsTransactions">
           <div class="settingAccount">
             <div class="accountSelect">
-              Account:
+              <h5>Account: </h5>
               <select id="selectionAccounts" required>
                 <option value="default">Select an account</option>
               </select>
