--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,7 +23,7 @@
         <h1>
           New Account:
         </h1>
-        <input type="text" />
+        <input class="inputAccount" type="text" />
         <button>Add new account</button>
       </form>
 
