Adding more styles

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -57,12 +57,12 @@
               </select>
             </div>
             <div class="fromTo">
-              From:
+              <h5>From:</h5>
               <select class="fromToSelections" id="inputFromSelect" required>
                 <option value="default">Select an account</option>
               </select>
   
-              To:
+              <h5>To:</h5>
               <select class="fromToSelections" id="inputToSelect" required>
                 <option value="default">Select an account</option>
               </select>
@@ -80,10 +80,10 @@
             </div>
           </div>
           <div class="settingAmmount">
-            Description
+            <h5>Description:</h5>
             <input id="transactionInputDescription" type="text" />
 
-            Amount:
+            <h5>Ammount:</h5>
             <input id="transactionInputAmount" type="number" min="1" required/>
           </div>
 
