--- a/frontend/index.html
+++ b/frontend/index.html
@@ -73,6 +73,8 @@
               Category:
             </h2> 
             <select id="selectionCategory" required>
+              <option value="default" selected disabled>Select a category</option>
+              <option value="newCategory">+ New Category</option>
             </select>
             <div class="newCategoryContainer">
               <input id="newCategoryName" type="text" />
