All transactions and accounts working properly.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,9 +30,18 @@
     </section>
     <section class="summaryAccounts">
       <h1>
-        Account summary
+        Accounts summary
       </h1>
-      <ul></ul>
+      <div class="accountsInfo">
+        <div class="accountName">
+          <h2>Account</h2>
+        </div>
+        <div class="accountBalance">
+          <h2>Balance</h2>
+        </div>
+      </div>
+      <ul>
+      </ul>
     </section>
     <section class="transactionsContainer">
       <form id="transactionsForm" action="">
