--- a/frontend/index.html
+++ b/frontend/index.html
@@ -107,12 +107,16 @@
 
 
     <div class="filters">
-      Filter by account:
-      <select></select>
+      <h3>
+        Filter by account:
+      </h3>
+      <select id="filterByAccount">
+        <option value="default">Select an account</option>
+      </select>
     </div>
     <table>
       <tbody>
-        <tr id="transInformation">
+        <tr id="transactionsContainer">
           <th>ID</th>
           <th>User</th>
           <th>Type</th>
